--- a/435. Non-overlapping Intervals.ipynb
+++ b/435. Non-overlapping Intervals.ipynb
@@ -29,27 +29,31 @@
     "\n",
     "class Solution:\n",
     "    def eraseOverlapIntervals(self, intervals: List[List[int]]) -> int:\n",
-    "        # 如果 intervals 為空，直接返回 0，因為沒有區間需要處理\n",
+    "        # 若輸入的區間列表為空，則不需要移除任何區間，直接回傳 0\n",
     "        if not intervals:\n",
     "            return 0\n",
     "\n",
-    "        # 將 intervals 按照每個區間的結束時間 (x[1]) 進行排序\n",
-    "        # 用貪心算法選擇最少的重疊區間\n",
-    "        intervals = sorted(intervals, key=lambda x: x[1]) # time: O(nlogn) # space: O(n)\n",
-    "        print(f\"{intervals=}\\n\")\n",
+    "        # 核心貪婪策略：根據每個區間的「結束時間」進行升序排序\n",
+    "        # 越早結束的區間，能為後面的區間留下越多可用空間\n",
+    "        intervals.sort(key=lambda x: x[1])\n",
     "\n",
-    "        count = 0 # 需要移除的區間數量\n",
-    "        pre_end = float(\"-inf\") # 前一個區間的結束時間\n",
-    "        for start, end in intervals: # time: O(n)\n",
-    "            print(f\"[start, end] = [{start}, {end}], {pre_end=}, {count=}\")\n",
-    "            # 如果當前區間的起始時間小於上一個有效區間的結束時間 pre_end\n",
-    "            # 表示這兩個區間有重疊，需要移除當前區間\n",
-    "            if pre_end > start:\n",
+    "        # 初始化移除計數器為 0\n",
+    "        count = 0\n",
+    "        \n",
+    "        # 紀錄目前最後一個被保留區間的結束時間，初始為第一個區間的結束點\n",
+    "        previous_end = intervals[0][1]\n",
+    "        \n",
+    "        # 從第二個區間開始遍歷，逐一檢查是否與前一個保留的區間重疊\n",
+    "        for start, end in intervals[1:]:\n",
+    "            # 如果目前區間的開始時間「小於」前一個區間的結束時間，代表發生重疊\n",
+    "            if previous_end > start:\n",
+    "                # 為了保留最多的區間，我們必須移除目前這個（結束較晚的）區間\n",
     "                count += 1\n",
     "            else:\n",
-    "                pre_end = end # 更新有效區間的結束時間\n",
-    "            print(f\"-> {pre_end=}, {count=}\")\n",
+    "                # 若沒有重疊，代表可以保留這個區間，並更新最後的結束邊界\n",
+    "                previous_end = end\n",
     "\n",
+    "        # 回傳總共移除的區間數量\n",
     "        return count"
    ]
   },
@@ -58,22 +62,6 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervals=[[1, 2], [2, 3], [1, 3], [3, 4]]\n",
-      "\n",
-      "[start, end] = [1, 2], pre_end=-inf, count=0\n",
-      "-> pre_end=2, count=0\n",
-      "[start, end] = [2, 3], pre_end=2, count=0\n",
-      "-> pre_end=3, count=0\n",
-      "[start, end] = [1, 3], pre_end=3, count=0\n",
-      "-> pre_end=3, count=1\n",
-      "[start, end] = [3, 4], pre_end=3, count=1\n",
-      "-> pre_end=4, count=1\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -107,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
