--- a/56. Merge Intervals.ipynb
+++ b/56. Merge Intervals.ipynb
@@ -11,50 +11,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 時間複雜度: O( $n\\ log\\ n$ )\n",
-    "* 空間複雜度: O( $n$ )"
+    "- 時間複雜度：$O(n \\log n)$  \n",
+    "  主要耗時在於 sort()，需要 $O(n \\log n)$。後續的 for 迴圈只需掃描一次陣列 $O(n)$。\n",
+    "- 空間複雜度：$O(n)$  \n",
+    "  建立了一個 result 清單來存放合併後的結果。在最差情況下（完全沒有區間重疊），空間複雜度為 $O(n)$。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
     "    def merge(self, intervals: List[List[int]]) -> List[List[int]]:\n",
-    "        # 先將 intervals 根據每個區間的起始值進行排序，以方便後續合併\n",
-    "        intervals = sorted(intervals) # time: O(nlogn), space: O(n)\n",
-    "        # print(f\"{intervals = }\")\n",
-    "\n",
-    "        # 初始化結果列表，並將第一個區間放入結果中\n",
-    "        result = [intervals[0]] # space: O(n)\n",
-    "        # print(f\"{result = }\")\n",
-    "\n",
-    "        # 從第二個區間開始遍歷每個區間\n",
-    "        for interval in intervals[1:]: # time: O(n)\n",
-    "            # print(f\"{interval = }\")\n",
-    "\n",
-    "            # 判斷\"當前區間\"是否與\"結果列表中最後一個區間\"重疊\n",
-    "            if result[-1][1] < interval[0]:\n",
-    "                # print(f\"if\\n{result[-1][1]} < {interval[0]}\")\n",
-    "                result.append(interval) # 沒有重疊，將當前區間加入結果列表\n",
-    "            else:\n",
-    "                # print(f\"else\\n{result[-1][1]} >= {interval[0]}\")\n",
-    "                # print(f\"{result[-1][1] =} = max({result[-1][1]}, {interval[1]})\")\n",
-    "                \n",
-    "                result[-1][1] = max(result[-1][1], interval[1])  # 重疊，將結果列表中最後一個區間的結束值更新為兩者之中較大的結束值\n",
+    "        # 檢查輸入是否為空，若是則直接回傳空清單\n",
+    "        if not intervals:\n",
+    "            return []\n",
     "            \n",
-    "            # print(f\"{result = }\")\n",
-    "            # print(\"-\" * 100)\n",
-    "        \n",
+    "        # 1. 根據每個區間的「起始位置」進行升序排序\n",
+    "        # 這是合併區間的關鍵，確保我們只需要向後檢查重疊\n",
+    "        intervals.sort(key=lambda x: x[0])\n",
+    "\n",
+    "        # 2. 初始化結果清單，先放入排序後的第一個區間作為基準\n",
+    "        result = [intervals[0]]\n",
+    "\n",
+    "        # 3. 從第二個區間開始遍歷\n",
+    "        for interval in intervals[1:]:\n",
+    "            # 如果 result 中最後一個區間的「結束位置」小於「當前區間的起始位置」\n",
+    "            # 代表兩者完全沒有重疊\n",
+    "            if result[-1][1] < interval[0]:\n",
+    "                # 直接將當前區間加入結果清單中\n",
+    "                result.append(interval)\n",
+    "            else:\n",
+    "                # 否則，代表有重疊發生，進行合併\n",
+    "                # 將 result 中最後一個區間的「結束位置」更新為兩者中較大的一個\n",
+    "                result[-1][1] = max(result[-1][1], interval[1])\n",
+    "\n",
+    "        # 4. 回傳合併完成後的區間清單\n",
     "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 6], [8, 10], [15, 18]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intervals = [[1,3],[2,6],[8,10],[15,18]]\n",
+    "Solution().merge(intervals)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -68,14 +92,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.9"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "6c2898c30be5f73b03e044cf4b0ab3750666a8191d61a4c93b022a132c823988"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
