--- a/57. Insert Interval.ipynb
+++ b/57. Insert Interval.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 線性掃描（Linear Scan）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* 時間複雜度: O( $n$ )\n",
     "* 空間複雜度: O( $n$ )"
    ]
@@ -104,11 +111,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 排序與合併（Sort & Merge）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 時間複雜度：$O(n \\log n)$  \n",
+    "  推導：主要消耗在 sort() 排序步驟。雖然合併過程是 $O(n)$，但整體受限於排序。  \n",
+    "  面試點：如果原陣列已排序（如本題），用這個方法會比線性掃描慢，但在無序輸入下這是標準做法。\n",
+    "- 空間複雜度：$O(n)$ 或 $O(\\log n)$  \n",
+    "  推導：取決於排序演算法的空間消耗（Python 的 Timsort 平均為 $O(n)$）。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def insert(self, intervals: List[List[int]], newInterval: List[int]) -> List[List[int]]:\n",
+    "        # 1. 先將新區間直接加入原本的區間列表中\n",
+    "        intervals.append(newInterval)\n",
+    "        \n",
+    "        # 2. 根據每個區間的起點 (index 0) 進行升序排序\n",
+    "        # 這是合併區間演算法中最關鍵的一步\n",
+    "        intervals.sort(key=lambda x: x[0])\n",
+    "        \n",
+    "        # 3. 初始化結果列表，先放入排序後的第一个區間作為起始比較對象\n",
+    "        result = [intervals[0]]\n",
+    "        \n",
+    "        # 4. 從第二個區間開始遍歷，逐一與 result 中最後一個區間比較\n",
+    "        for interval in intervals[1:]:\n",
+    "            # 如果目前區間的起點大於 result 中最後一個區間的終點，代表完全不重疊\n",
+    "            if result[-1][1] < interval[0]:\n",
+    "                # 直接將目前區間加入結果中\n",
+    "                result.append(interval)\n",
+    "            else:\n",
+    "                # 否則代表有重疊，更新 result 中最後一個區間的終點\n",
+    "                # 取「原本終點」與「目前區間終點」的最大值，完成合併\n",
+    "                result[-1][1] = max(result[-1][1], interval[1])\n",
+    "\n",
+    "        # 5. 回傳合併完成後的區間列表\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [3, 10], [12, 16]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intervals = [[1,2],[3,5],[6,7],[8,10],[12,16]]\n",
+    "newInterval = [4,8]\n",
+    "\n",
+    "Solution().insert(intervals, newInterval)"
+   ]
   }
  ],
  "metadata": {
@@ -127,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
