--- a/73. Set Matrix Zeroes.ipynb
+++ b/73. Set Matrix Zeroes.ipynb
@@ -8,73 +8,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 時間複雜度：$O(m \\times n)$  \n",
+    "- 空間複雜度：$O(1)$  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
-    "    def setZeroes(self, matrix) -> None:\n",
-    "        \"\"\"\n",
-    "        Do not return anything, modify matrix in-place instead.\n",
-    "        \"\"\"\n",
-    "        hash_row = set()\n",
-    "        hash_col = set()\n",
-    "        print(f\"int matrix: {matrix}\")\n",
+    "    def setZeroes(self, matrix: List[List[int]]) -> None:\n",
+    "        # 取得矩陣的總列數 m 與總行數 n\n",
+    "        m = len(matrix)\n",
+    "        n = len(matrix[0])\n",
     "\n",
-    "        # 抓出需要轉換的row和col，並存進set\n",
-    "        for row in range(len(matrix)):\n",
-    "            for col in  range(len(matrix[0])):\n",
+    "        # 因為 matrix[0][0] 同時代表第一列與第一行，會產生衝突\n",
+    "        # 所以我們額外用一個變數來單獨記錄「第一行 (column 0)」是否需要歸零\n",
+    "        first_col_has_zero = False\n",
+    "\n",
+    "        # --- 第一階段：標記階段 ---\n",
+    "        for row in range(m):\n",
+    "            # 檢查當前這一列的第一個元素是否為 0，若是則標記第一行未來需歸零\n",
+    "            if matrix[row][0] == 0:\n",
+    "                first_col_has_zero = True\n",
+    "\n",
+    "            # 從第二個元素 (col=1) 開始檢查\n",
+    "            for col in range(1, n):\n",
+    "                # 如果發現元素為 0，則在該列的開頭與該行的開頭做標記\n",
     "                if matrix[row][col] == 0:\n",
-    "                    hash_row.add(row)\n",
-    "                    hash_col.add(col)\n",
+    "                    matrix[row][0] = 0  # 標記這一列\n",
+    "                    matrix[0][col] = 0  # 標記這一行\n",
     "\n",
-    "        print(f\"hash_row: {hash_row}\")\n",
-    "        print(f\"hash_col: {hash_col}\")\n",
+    "        # --- 第二階段：根據標記填充 0 (排除第一列與第一行) ---\n",
+    "        # 為了避免破壞標記位，我們先處理索引從 1 開始的內部區域\n",
+    "        for row in range(1, m):\n",
+    "            for col in range(1, n):\n",
+    "                # 如果該位置對應的列首或行首標記為 0，則將該位置設為 0\n",
+    "                if (matrix[row][0] == 0) or (matrix[0][col] == 0):\n",
+    "                    matrix[row][col] = 0\n",
     "\n",
-    "\n",
-    "        # 轉換row，可直接指定整個row更改\n",
-    "        for row in hash_row:\n",
-    "            matrix[row] = [0] * len(matrix[0])\n",
-    "            print(f\"row: {row}, matrix: {matrix}\")\n",
-    "\n",
-    "        # 轉換col，需先指定row再指定col才可更改\n",
-    "        for col in hash_col:\n",
-    "            for row in range(len(matrix)):\n",
-    "                matrix[row][col] = 0\n",
-    "                print(f\"row: {row}, col: {col}, matrix: {matrix}\")\n",
+    "        # --- 第三階段：處理第一列的歸零 ---\n",
+    "        # 如果 matrix[0][0] 被標記為 0，代表第一列原本含有 0\n",
+    "        if matrix[0][0] == 0:\n",
+    "            for col in range(n):\n",
+    "                matrix[0][col] = 0\n",
+    "            \n",
+    "        # --- 第四階段：處理第一行的歸零 ---\n",
+    "        # 根據一開始記錄的布林值，決定是否將第一行全部設為 0\n",
+    "        if first_col_has_zero:\n",
+    "            for row in range(m):\n",
+    "                matrix[row][0] = 0\n",
     "\n",
     "        return matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "int matrix: [[0, 1, 2, 0], [3, 4, 5, 2], [1, 3, 1, 5]]\n",
-      "hash_row: {0}\n",
-      "hash_col: {0, 3}\n",
-      "row: 0, matrix: [[0, 0, 0, 0], [3, 4, 5, 2], [1, 3, 1, 5]]\n",
-      "row: 0, col: 0, matrix: [[0, 0, 0, 0], [3, 4, 5, 2], [1, 3, 1, 5]]\n",
-      "row: 1, col: 0, matrix: [[0, 0, 0, 0], [0, 4, 5, 2], [1, 3, 1, 5]]\n",
-      "row: 2, col: 0, matrix: [[0, 0, 0, 0], [0, 4, 5, 2], [0, 3, 1, 5]]\n",
-      "row: 0, col: 3, matrix: [[0, 0, 0, 0], [0, 4, 5, 2], [0, 3, 1, 5]]\n",
-      "row: 1, col: 3, matrix: [[0, 0, 0, 0], [0, 4, 5, 0], [0, 3, 1, 5]]\n",
-      "row: 2, col: 3, matrix: [[0, 0, 0, 0], [0, 4, 5, 0], [0, 3, 1, 0]]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[[0, 0, 0, 0], [0, 4, 5, 0], [0, 3, 1, 0]]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix = [[0,1,2,0],[3,4,5,2],[1,3,1,5]]\n",
+    "Solution().setZeroes(matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 時間複雜度：$O(m \\times n)$  \n",
+    "  遍歷兩次矩陣，第一次尋找 0，第二次修改數值。矩陣大小為 $m \\times n$。\n",
+    "- 空間複雜度：$O(m + n)$  \n",
+    "  額外使用了兩個陣列來儲存標記資訊，一個長度為 $m$，另一個為 $n$。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def setZeroes(self, matrix: List[List[int]]) -> None:\n",
+    "        # 取得矩陣的總列數 (m) 與總行數 (n)\n",
+    "        m = len(matrix)\n",
+    "        n = len(matrix[0])\n",
+    "\n",
+    "        # 初始化兩個布林陣列，用來記錄哪些行與列需要被歸零\n",
+    "        # 空間複雜度為 O(m + n)\n",
+    "        row_zero = [False] * m\n",
+    "        col_zero = [False] * n\n",
+    "\n",
+    "        # 第一輪遍歷：找出所有數值為 0 的座標\n",
+    "        for row in range(m):\n",
+    "            for col in range(n):\n",
+    "                # 如果發現元素是 0\n",
+    "                if matrix[row][col] == 0:\n",
+    "                    # 標記該列需要歸零\n",
+    "                    row_zero[row] = True\n",
+    "                    # 標記該行需要歸零\n",
+    "                    col_zero[col] = True\n",
+    "\n",
+    "        # 第二輪遍歷：根據剛才的標記來修改矩陣內容\n",
+    "        for row in range(m):\n",
+    "            for col in range(n):\n",
+    "                # 如果該位置所在的列或行被標記為 True\n",
+    "                if row_zero[row] or col_zero[col]:\n",
+    "                    # 將該元素設為 0\n",
+    "                    matrix[row][col] = 0\n",
+    "\n",
+    "        return matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0], [0, 4, 5, 0], [0, 3, 1, 0]]"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "servtech",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -101,14 +178,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.12.9"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "b4e06251350f7d4dc4e777a60219df6f799a43322844e92d92fd6156d3f0a542"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
