--- a/253. Meeting Rooms II.ipynb
+++ b/253. Meeting Rooms II.ipynb
@@ -50,31 +50,32 @@
     "\n",
     "class Solution:\n",
     "    def minMeetingRooms(self, intervals):\n",
-    "        # Edge Case: 如果沒有會議，不需要任何房間\n",
+    "        # 如果輸入的區間清單為空，直接回傳 0 間房間\n",
     "        if not intervals:\n",
     "            return 0\n",
-    "\n",
-    "        # 將會議按照「開始時間」排序\n",
+    "        \n",
+    "        # 按照「開始時間」對所有會議進行升序排序，確保我們按時間順序處理\n",
     "        intervals.sort(key=lambda x: x[0])\n",
     "\n",
-    "        # 初始化一個最小堆疊，用來存放正在進行中會議的「結束時間」\n",
-    "        free_rooms = []\n",
+    "        # 初始化一個最小堆疊，用來記錄「目前正在使用的房間」的結束時間\n",
+    "        free_room = []\n",
     "\n",
-    "        # 將第一個會議的結束時間放入堆疊\n",
-    "        heapq.heappush(free_rooms, intervals[0][1])\n",
+    "        # 將第一個會議的結束時間推入堆疊中，代表佔用第一間房\n",
+    "        heapq.heappush(free_room, intervals[0][1])\n",
     "\n",
     "        # 從第二個會議開始遍歷\n",
-    "        for i in intervals[1:]:\n",
-    "            # 如果當前會議的開始時間 >= 堆疊中最早結束的時間\n",
-    "            if i[0] >= free_rooms[0]:\n",
-    "                # 表示可以重複使用這間房間，將舊的結束時間彈出\n",
-    "                heapq.heappop(free_rooms)\n",
-    "            \n",
-    "            # 將當前會議的結束時間放入堆疊（如果是重複使用，這步等於更新結束時間）\n",
-    "            heapq.heappush(free_rooms, i[1])\n",
+    "        for start, end in intervals[1:]:\n",
+    "            # free_room[0] 是目前所有房間中，最早會空出來的時間\n",
+    "            # 如果目前會議的開始時間 >= 最早結束時間，代表可以重複使用該房間\n",
+    "            if free_room[0] <= start:\n",
+    "                # 釋放該房間（從堆疊中彈出舊的結束時間）\n",
+    "                heapq.heappop(free_room)\n",
     "\n",
-    "        # 堆疊的大小即為所需的最小房間數\n",
-    "        return len(free_rooms)"
+    "            # 將當前會議的結束時間推入堆疊（代表佔用房間直到該時間點）\n",
+    "            heapq.heappush(free_room, end)\n",
+    "\n",
+    "        # 堆疊中剩餘的元素數量，就是整個過程中同時被佔用的最大房間數\n",
+    "        return len(free_room)"
    ]
   },
   {
@@ -137,29 +138,29 @@
     "            return 0\n",
     "\n",
     "        # 1. 將開始時間與結束時間分開並排序\n",
-    "        starts = sorted([i[0] for i in intervals])\n",
-    "        ends = sorted([i[1] for i in intervals])\n",
+    "        starts = sorted([interval[0] for interval in intervals])\n",
+    "        ends = sorted([interval[1] for interval in intervals])\n",
     "\n",
-    "        res = 0      # 目前需要的最大房間數\n",
+    "        result = 0      # 目前需要的最大房間數\n",
     "        count = 0    # 當前正在使用的房間數\n",
-    "        s, e = 0, 0  # 分別指向 starts 和 ends 的指標\n",
+    "        start_idx, end_idx = 0, 0  # 分別指向 starts 和 ends 的指標\n",
     "\n",
     "        # 2. 遍歷所有的開始時間\n",
-    "        while s < len(intervals):\n",
+    "        while start_idx < len(intervals):\n",
     "            # 如果會議開始時間 < 目前最早的結束時間\n",
-    "            if starts[s] < ends[e]:\n",
+    "            if starts[start_idx] < ends[end_idx]:\n",
     "                # 需要新房間\n",
     "                count += 1\n",
-    "                s += 1\n",
+    "                start_idx += 1\n",
     "            else:\n",
     "                # 有房間空出來了，將結束指標後移\n",
     "                count -= 1\n",
-    "                e += 1\n",
+    "                end_idx += 1\n",
     "            \n",
     "            # 紀錄過程中出現過的最大房間需求\n",
-    "            res = max(res, count)\n",
+    "            result = max(result, count)\n",
     "\n",
-    "        return res"
+    "        return result"
    ]
   },
   {
