--- a/268. Missing Number.ipynb
+++ b/268. Missing Number.ipynb
@@ -9,29 +9,205 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "#### 1. XOR 位元運算法 (面試首選的最優解)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/268.jpg\" style=\"zoom:50%\"/>"
+    "- 時間複雜度：$O(n)$ —— 只需遍歷陣列一次。\n",
+    "- 空間複雜度：$O(1)$ —— 只使用一個變數 res。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def missingNumber(self, nums: List[int]) -> int:\n",
-    "        a = set(range(len(nums) + 1))\n",
-    "        a = list(a - set(nums))\n",
+    "    def missingNumber(self, nums: list[int]) -> int:\n",
+    "        n = len(nums)\n",
+    "        res = n  # 初始值設為 n，因為迴圈 index 只會到 n-1\n",
     "        \n",
-    "        return a[0]"
+    "        for i in range(n):\n",
+    "            # 將 index (i) 與數值 (nums[i]) 全部異或在一起\n",
+    "            # 成對出現的數字會抵銷成 0\n",
+    "            res ^= i ^ nums[i]\n",
+    "            \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3,0,1]\n",
+    "Solution().missingNumber(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. 數學求和法 (最直觀的基礎解)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 時間複雜度：$O(n)$ —— sum(nums) 需要遍歷一次陣列。\n",
+    "- 空間複雜度：$O(1)$ —— 僅存儲兩個總和變數。  \n",
+    "注意：面試時需主動提及「大數據下可能會有整數溢位風險」。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def missingNumber(self, nums: list[int]) -> int:\n",
+    "        n = len(nums)\n",
+    "        \n",
+    "        # 預期總和：(0 + n) * (n + 1) / 2\n",
+    "        expected_sum = n * (n + 1) // 2\n",
+    "        \n",
+    "        # 實際總和：陣列中所有元素的加總\n",
+    "        actual_sum = sum(nums)\n",
+    "        \n",
+    "        # 兩者之差即為缺失值\n",
+    "        return expected_sum - actual_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3,0,1]\n",
+    "Solution().missingNumber(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. 原地交換法 (處理變體題的進階解)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 時間複雜度：$O(n)$ —— 雖然有 while 嵌套，但每個數字最多「歸位」一次。\n",
+    "- 空間複雜度：$O(1)$ —— 直接修改原陣列，不佔額外空間。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def missingNumber(self, nums: list[int]) -> int:\n",
+    "        n = len(nums)\n",
+    "        i = 0\n",
+    "        \n",
+    "        # 第一步：嘗試讓每個數字回到對應的索引位置\n",
+    "        while i < n:\n",
+    "            val = nums[i]\n",
+    "            # 如果值 < n 且它不在正確的位置上 (nums[i] 應該要在 index i)\n",
+    "            if val < n and nums[i] != nums[val]:\n",
+    "                # 交換，將當前數字送回正確的家\n",
+    "                nums[i], nums[val] = nums[val], nums[i]\n",
+    "            else:\n",
+    "                # 已經歸位或是值為 n (沒位子放)，就看下一個\n",
+    "                i += 1\n",
+    "        \n",
+    "        # 第二步：再次掃描，看誰坐在錯的位置\n",
+    "        for i in range(n):\n",
+    "            if nums[i] != i:\n",
+    "                return i\n",
+    "        \n",
+    "        # 如果 0 ~ n-1 都對齊了，那缺的就是 n\n",
+    "        return n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3,0,1]\n",
+    "Solution().missingNumber(nums)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.12.8)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
